--- a/package.json
+++ b/package.json
@@ -70,5 +70,11 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "deasync": "^0.1.20",
+    "fs": "0.0.1-security",
+    "fs-extra": "^9.0.0",
+    "fs-nextra": "^0.5.1"
+  }
 }
